fixed devoops window scrollbar bug, added devoops window resize handler in order to resize main container, removed duplicate main.css  file import, reorder css files import order, replaced bootstrap component with bootstrap sass-component, added grunt compass task in order to compile application scss files

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -2,6 +2,7 @@ body {
     background: #fafafa;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #333;
+    height: initial;
 }
 
 #content {
